--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+github.client.id=353ebf2352125e337681
+github.client.secret=8cc6df89e4e9bf8f35cbc29c208cb471067c59fe
+github.redirect.uri=http://localhost:8081/callback
